hubSide/force-app/main/default/objects/Document__c/fields/Date_de_reception__c.field-meta.xml
<CustomField>
    <fullName>Date_de_reception__c</fullName>
    <description>Date de réception du document.</description>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>