hubSide/force-app/main/default/objects/Document__c/fields/Email_content__c.field-meta.xml
<CustomField>
    <fullName>Email_content__c</fullName>
    <formula>Related_sinistre__r.Source:EmailMessage.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email content</label>
    <type>Text</type>
</CustomField>