hubSide/force-app/main/default/objects/Document__c/fields/Email_Object__c.field-meta.xml
<CustomField>
    <fullName>Email_Object__c</fullName>
    <label>Email Objet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>