hubSide/force-app/main/default/objects/Document__c/fields/Expediteur__c.field-meta.xml
<CustomField>
    <fullName>Expediteur__c</fullName>
    <label>Expediteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>