hubSide/force-app/main/default/objects/Document__c/fields/Origine_document__c.field-meta.xml
<CustomField>
    <fullName>Origine_document__c</fullName>
    <description>L&apos;origine du canal de réception du document</description>
    <label>Origine du document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Courrier</fullName>
            </value>
            <value>
                <fullName>Logistique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>