hubSide/force-app/main/default/objects/Document__c/fields/Piece_justificative__c.field-meta.xml
<CustomField>
    <fullName>Piece_justificative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lie le document à la pièce justificative qu&apos;il représente</description>
    <label>Pièce justificative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Piece_justificative_Sinistre__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Related_sinistre__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Piece_justificative_Sinistre__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>