hubSide/force-app/main/default/objects/Document__c/fields/Related_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Related_sinistre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sinistre</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>