hubSide/force-app/main/default/objects/Document__c/fields/RelatedDMS__c.field-meta.xml
<CustomField>
    <fullName>RelatedDMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup vers le case GED associé - Link to the DMS case</description>
    <label>GED associée</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documents (Sinistre associé)</relationshipLabel>
    <relationshipName>Document</relationshipName>
    <type>Lookup</type>
</CustomField>