hubSide/force-app/main/default/objects/Document__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
                <label>Rattaché</label>
            </value>
            <value>
                <fullName>Codified</fullName>
                <label>Codifié</label>
            </value>
            <value>
                <fullName>Removed</fullName>
                <label>Supprimé</label>
            </value>
            <value>
                <fullName>Identifié</fullName>
                <isActive>false</isActive>
                <label>Identifié</label>
            </value>
            <value>
                <fullName>Scanned</fullName>
                <isActive>false</isActive>
                <label>Scanned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>