hubSide/force-app/main/default/objects/Document__c/fields/Type_piece_justificative__c.field-meta.xml
<CustomField>
    <fullName>Type_piece_justificative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de pièces justificatives</label>
    <referenceTo>Types_piece_justificative__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>