hubSide/force-app/main/default/objects/Document__c/fields/Valideur__c.field-meta.xml
<CustomField>
    <fullName>Valideur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id du valideur</description>
    <label>Valideur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>